# todoobyahmed

./: .gitignore  .vercelignore  CHECKLIST.md  QUICKSTART-DEPLOYMENT.md  README.md  SETUP.md  VERCEL_ENV_SETUP.md  package-lock.json  package.json  pyproject.toml  quickstart.bat  quickstart.sh  test_phase1.py  vercel.json
.claude/: context.md
backend/: .env.example  .gitignore  .vercelignore  README.md  add-env-vars.sh  pyproject.toml  requirements.txt  test_db_connection.py  test_db_simple.py  test_final.py
backend/alembic/versions/: 003_add_conversations_messages.py
backend/api/: index.py
backend/scripts/: init_db.sql
backend/src/: config.py  database.py  main.py
backend/src/agents/: todo_agent.py
backend/src/api/: dependencies.py
backend/src/api/middleware/: __init__.py  error_handler.py  jwt_auth.py
backend/src/api/models/: auth.py  responses.py  task.py
backend/src/api/routes/: auth.py  chat.py  tasks.py
backend/src/db/: __init__.py  connection.py
backend/src/mcp/: server.py
backend/src/mcp/tools/: add_task.py  complete_task.py  delete_task.py  list_tasks.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/services/: __init__.py  auth_service.py  chat_service.py  task_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_chat_api_contract.py
backend/tests/integration/: test_chat_task_creation.py
backend/tests/unit/: test_auth_service.py  test_mcp_add_task.py
frontend/: .env.local.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  (+2 more)
(+68 files in other folders)
