[project]
name = "todo-app"
version = "1.0.0"
description = "Phase I: In-Memory Python Console Todo Application"
requires-python = ">=3.13"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.uv]
dev-dependencies = ["pytest"]
